完善现有接口的swagger注释文档
