# internal/controller/play.go
@@ -19,6 +19,16 @@ func NewPlayController(store storage.Factory) *PlayController {
 	}
 }
 
+// Play 播放视频
+//
+// @Summary      播放设备的通道视频
+// @Description  根据设备id、通道id去播放视频
+// @Tags         播放
+// @Produce      json
+// @Param       deviceId	path	string	true	"设备id"
+// @Param       channelId	path	string	true	"通道id"
+// @Success      200  {object}  model.StreamInfo
+// @Router       /play/start/{deviceId}/{channelId} [post]
 func (p *PlayController) Play(c *gin.Context) {
 	deviceId := c.Param("deviceId")
 	channelId := c.Param("channelId")
